2015-05-11  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Remove
	file.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i586/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i586/pthread_cond_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i686/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i686/pthread_cond_wait.S: Likewise.

	* nptl/Makefile (CFLAGS-accept.c): Add -fexceptions and
	-fasynchronous-unwind-tables.
	(CFLAGS-sendto.c): Likewise.
	(CFLAGS-sendmsg.c): Likewise.
	(CFLAGS-connect.c): Likewise.
	(CFLAGS-recvmsg.c): Likewise.
	(CFLAGS-recvfrom.c): Likewise.
	* sysdeps/unix/sysv/linux/socketcall.h (SOCKOP_invalid): Define.
	(SOCKETCALL): New macro: non-cancellable socketcall.
	(SOCKETCALL_CANCEL): New macro: cancellable socketcall.
	* sysdeps/unix/sysv/linux/Makefile [$(subdir) = socket]: Remove
	internal_accept4, internal_recvmmsg, and internal_sendmmsg rules.
	* sysdeps/unix/sysv/linux/accept.c: New file.
	* sysdeps/unix/sysv/linux/bind.c: Likewise.
	* sysdeps/unix/sysv/linux/connect.c: Likewise.
	* sysdeps/unix/sysv/linux/getpeername.c: Likewise.
	* sysdeps/unix/sysv/linux/getsockname.c: Likewise.
	* sysdeps/unix/sysv/linux/getsockopt.c: Likewise.
	* sysdeps/unix/sysv/linux/listen.c: Likewise.
	* sysdeps/unix/sysv/linux/recv.c: Likewise.
	* sysdeps/unix/sysv/linux/recvfrom.c: Likewise.
	* sysdeps/unix/sysv/linux/recvmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/send.c: Likewise.
	* sysdeps/unix/sysv/linux/sendmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/sendto.c: Likewise.
	* sysdeps/unix/sysv/linux/setsockopt.c: Likewise.
	* sysdeps/unix/sysv/linux/shutdown.c: Likewise.
	* sysdeps/unix/sysv/linux/socket.c: Likewise.
	* sysdeps/unix/sysv/linux/socketpair.c: Likewise.
	* sysdeps/unix/sysv/linux/recvmmsg.c (__internal_recvmmsg): Remove
	prototype.