@@ -1,5 +1,13 @@
 2015-05-11  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/unix/sysv/linux/i386/Makefile [$(subdir) = misc)]: Remove
+	call_pselect6 object.
+	[$(subdir) = io]: Remove call_sync_file_range object.
+	* sysdeps/unix/sysv/linux/i386/call_pselect6.S: Remove file.
+	* sysdeps/unix/sysv/linux/i386/call_sync_file_range.S: Remove file.
+	* sysdeps/unix/sysv/linux/i386/pselect.c: Remove file.
+	* sysdeps/unix/sysv/linux/i386/sync_file_range.c: Remove file.
+
 	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Remove
 	file.
 	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.
